[gd_scene load_steps=14 format=2]

[ext_resource path="res://script/end_game.gd" type="Script" id=1]
[ext_resource path="res://cat/Background.png" type="Texture" id=2]
[ext_resource path="res://cat/End01.png" type="Texture" id=3]
[ext_resource path="res://cat/End03.png" type="Texture" id=4]
[ext_resource path="res://cat/End02.png" type="Texture" id=5]
[ext_resource path="res://font/Arabica.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://script/mouse4.gd" type="Script" id=7]
[ext_resource path="res://cat/mouse.png" type="Texture" id=8]
[ext_resource path="res://sound/button-29.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/Ib_Ib_-_Memory_-_Piano_Ver.-aYZIaizIWxk.wav" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
margin_right = 800.0
margin_bottom = 599.0
texture = ExtResource( 2 )

[node name="UI" type="TextureRect" parent="."]
margin_left = 210.5
margin_top = 9.51218
margin_right = 590.5
margin_bottom = 586.512
texture = ExtResource( 3 )

[node name="home_button" type="TextureButton" parent="."]
margin_left = 340.0
margin_top = 220.499
margin_right = 396.953
margin_bottom = 280.499
texture_normal = ExtResource( 4 )

[node name="replay_button" type="TextureButton" parent="."]
margin_left = 420.0
margin_top = 220.0
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )

[node name="high_score" type="RichTextLabel" parent="."]
margin_left = 600.0
margin_top = 15.0
margin_right = 797.0
margin_bottom = 87.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )

[node name="answer" type="Label" parent="."]
margin_left = 634.0
margin_top = 564.0
margin_right = 771.0
margin_bottom = 631.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 2

[node name="score" type="Label" parent="."]
margin_left = 326.0
margin_top = 169.0
margin_right = 493.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
valign = 1

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Node2D"]
texture = ExtResource( 8 )

[node name="Sound" type="AudioStreamPlayer2D" parent="Node2D"]
stream = ExtResource( 9 )

[node name="song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
autoplay = true

[connection signal="pressed" from="home_button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="replay_button" to="." method="_on_replay_button_pressed"]
